Rename Type methods
Align names with those present in JavaTypeName, dropping 'get' prefix.
This makes the contract of getName() more explicit: it is really
simpleName().

JIRA: YANGTOOLS-1792
Change-Id: Ia6256fda93d6de82e7b75911633526bf98510caf
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>